--- a/packages/rettangoli-ui/rettangoli.config.yaml
+++ b/packages/rettangoli-ui/rettangoli.config.yaml
@@ -36,6 +36,9 @@ vt:
         - title: "Input"
           files: "primitives/input"
           description: "Input component tests"
+        - title: "Input Number"
+          files: "primitives/input-number"
+          description: "Input number component tests"
         - title: "Color Picker"
           files: "primitives/colorPicker"
           description: "Color picker component tests"
