--- a/packages/rettangoli-ui/src/components/form/form.view.yaml
+++ b/packages/rettangoli-ui/src/components/form/form.view.yaml
@@ -303,8 +303,10 @@ events:
 template:
   - rtgl-view w=f p=md g=lg ${containerAttrString}:
       - rtgl-view g=sm w=f:
-          - rtgl-text s=lg: ${title}
-          - rtgl-text c=mu-fg: ${description}
+          - $if title:
+              - rtgl-text s=lg: ${title}
+          - $if description:
+              - rtgl-text c=mu-fg: ${description}
       - rtgl-view g=lg w=f:
           - $for field, i in fields:
               - rtgl-view g=md w=f:
@@ -316,8 +318,12 @@ template:
                       - rtgl-text s=sm c=mu-fg: ${field.description}
                   - $if field.inputType == "read-only-text":
                       - rtgl-text s=sm: ${field.defaultValue}
-                  - $if field.inputType == "inputText":
-                      - rtgl-input#field-${field.name} w=f:
+                  - $if field.inputType == "inputText" || field.inputType == 'input-text':
+                      - rtgl-input#field-${field.name} w=f min=${field.min} max=${field.max} step=${field.step}:
+                  - $if field.inputType == "input-number":
+                      - rtgl-input-number#field-${field.name} w=f:
+                  - $if field.inputType == "input-textarea":
+                      - rtgl-textarea#field-${field.name} w=f rows=${field.rows} w=f:
                   - $if field.inputType == "popover-input":
                       - rtgl-popover-input#field-${field.name} label="${field.label}":
                   - $if field.inputType == "select":
