--- a/packages/rettangoli-ui/src/components/select/select.view.yaml
+++ b/packages/rettangoli-ui/src/components/select/select.view.yaml
@@ -12,6 +12,8 @@ attrsSchema:
 propsSchema:
   type: object
   properties:
+    placeholder:
+      type: string
     options:
       type: array
       items:
