Feature/add template selection for config (#220)

--- a/packages/rettangoli-cli/package.json
+++ b/packages/rettangoli-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rtgl",
-  "version": "0.0.16",
+  "version": "0.0.17",
   "description": "CLI tool for Rettangoli - A frontend framework and development toolkit",
   "type": "module",
   "bin": {
@@ -49,7 +49,7 @@
     "js-yaml": "^4.1.0",
     "@rettangoli/fe": "workspace:0.0.10",
     "@rettangoli/sites": "workspace:0.2.2",
-    "@rettangoli/vt": "workspace:0.0.2-rc3",
+    "@rettangoli/vt": "workspace:0.0.3",
     "@rettangoli/ui": "workspace:0.1.22"
   }
 }
