--- a/examples/example1/.gitignore
+++ b/examples/example1/.gitignore
@@ -1,4 +1,7 @@
 .rettangoli
+.temp
+_site
+static/public/main.js
 vt/static/public/main.js
 vt/static/public/main.js.map
 vt/static/public/rtgl-icons.js
