--- a/.github/workflows/release-site.yaml
+++ b/.github/workflows/release-site.yaml
@@ -8,6 +8,8 @@ on:
     branches: ["main"]
     paths:
       - "apps/rettangoli.dev/**"
+      - "tasks/**"
+      - ".github/workflows/release-site.yaml"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -30,18 +32,18 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # Setup Bun
       - uses: oven-sh/setup-bun@v2
         with:
           bun-version: 1.2.2
 
-      # Install dependencies from root
       - name: Install Dependencies
         run: bun install --frozen-lockfile
 
-      # Install rtgl CLI globally
       - name: Install rtgl CLI
-        run: npm i -g rtgl
+        run: npm i -g rtgl kanbatte
+
+      - name: Build kanbatte
+        run: kanbatte task build
 
       - name: Build
         working-directory: ./apps/rettangoli.dev
@@ -51,11 +53,14 @@ jobs:
         working-directory: ./apps/rettangoli.dev
         run: bun run build
 
+      - name: Merge playground and tasks
+        run: cp -rf ./apps/rettangoli.dev/_site/* _site
+
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v4
         with:
           name: dist
-          path: ./apps/rettangoli.dev/_site/
+          path: ./_site/
 
   deploy:
     needs: build
