--- a/packages/rettangoli-ui/src/components/dropdownMenu/dropdownMenu.view.yaml
+++ b/packages/rettangoli-ui/src/components/dropdownMenu/dropdownMenu.view.yaml
@@ -19,6 +19,8 @@ propsSchema:
               - label
               - item
               - separator
+          testId:
+            type: string
 
 attrsSchema:
   type: object
@@ -50,7 +52,7 @@ template:
                   - rtgl-view w=f ph=lg pv=md:
                       - rtgl-text s=sm c=mu-fg: ${item.label}
                 $elif item.type == 'item':
-                  - rtgl-view#option-${i} w=f h-bgc=ac ph=lg pv=md cur=p br=md bgc=mu:
+                  - rtgl-view#option-${i} w=f h-bgc=ac ph=lg pv=md cur=p br=md bgc=mu data-testid=${item.testId}:
                       - rtgl-text: ${item.label}
                 $elif item.type == 'separator':
                   - rtgl-view w=f h=1 ph=lg mv=md bgc=bo:
