--- a/packages/rettangoli-ui/src/components/form/form.view.yaml
+++ b/packages/rettangoli-ui/src/components/form/form.view.yaml
@@ -269,6 +269,8 @@ propsSchema:
                     type: string
                   content:
                     type: string
+                  testId:
+                    type: string
                 required:
                   - id
                   - content
@@ -374,5 +376,5 @@ template:
       - rtgl-view g=sm w=f:
           - rtgl-view d=h ah=e g=sm w=f:
               - $for button, i in actions.buttons:
-                  - rtgl-button#action-${button.id}: ${button.content}
+                  - rtgl-button#action-${button.id} data-testid=${button.testId}: ${button.content}
       - rtgl-tooltip ?open=${tooltipState.open} x=${tooltipState.x} y=${tooltipState.y} placement="top" content="${tooltipState.content}":
