--- a/packages/rettangoli-ui/src/components/tabs/tabs.view.yaml
+++ b/packages/rettangoli-ui/src/components/tabs/tabs.view.yaml
@@ -37,6 +37,8 @@ propsSchema:
             type: string
           id:
             type: string
+          testId:
+            type: string
 
 attrsSchema:
   type: object
@@ -60,5 +62,5 @@ events:
 template:
   - rtgl-view d=h g=sm bgc=mu p=sm br=lg ${containerAttrString}:
     - $for item in items:
-        - rtgl-view#tab-${item.id} data-id=${item.id} cur=p bgc=${item.bgColor} bw=xs bc=${item.borderColor} pv=md ph=lg br=lg:
+        - rtgl-view#tab-${item.id} data-id=${item.id} cur=p bgc=${item.bgColor} bw=xs bc=${item.borderColor} pv=md ph=lg br=lg data-testid=${item.testId}:
           - rtgl-text s=sm c=${item.textColor}: "${item.label}"
