--- a/packages/rettangoli-vt/package.json
+++ b/packages/rettangoli-vt/package.json
@@ -15,7 +15,7 @@
     "commander": "^13.1.0",
     "js-yaml": "^4.1.0",
     "liquidjs": "^10.21.0",
-    "playwright": "^1.52.0",
+    "playwright": "1.57.0",
     "sharp": "^0.33.0",
     "shiki": "^3.3.0"
   }
