--- a/packages/rettangoli-ui/package.json
+++ b/packages/rettangoli-ui/package.json
@@ -34,7 +34,7 @@
     "esbuild": "^0.20.0",
     "looks-same": "^9.0.1",
     "pixelmatch": "^6.0.0",
-    "playwright": "^1.46.0",
+    "playwright": "1.57.0",
     "pngjs": "^7.0.0"
   },
   "keywords": [
