--- a/.github/workflows/ci-ui.yaml
+++ b/.github/workflows/ci-ui.yaml
@@ -19,7 +19,7 @@ jobs:
 
       - uses: oven-sh/setup-bun@v2
         with:
-          bun-version: 1.2.2
+          bun-version: 1.3.5
 
       - name: Install Dependencies
         run: bun install --frozen-lockfile
@@ -40,7 +40,7 @@ jobs:
         run: bunx playwright@1.57.0 install-deps chromium
 
       - name: Run Visual Tests
-        run: bun run vt:report
+        run: MALLOC_ARENA_MAX=2 bun run vt:report
         working-directory: ./packages/rettangoli-ui
 
       - name: Upload VT Images as Artifacts
