--- a/.github/workflows/ci-ui.yaml
+++ b/.github/workflows/ci-ui.yaml
@@ -17,10 +17,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: actions/setup-node@v4
-        with:
-          node-version: '22'
-
       - uses: oven-sh/setup-bun@v2
         with:
           bun-version: 1.3.5
@@ -52,7 +48,7 @@ jobs:
         working-directory: ./packages/rettangoli-ui
 
       - name: Run Report
-        run: node ../rettangoli-cli/cli.js vt report
+        run: bun run ../rettangoli-cli/cli.js vt report
         working-directory: ./packages/rettangoli-ui
 
       - name: Upload VT Images as Artifacts
