--- a/packages/rettangoli-vt/package.json
+++ b/packages/rettangoli-vt/package.json
@@ -15,8 +15,9 @@
     "commander": "^13.1.0",
     "js-yaml": "^4.1.0",
     "liquidjs": "^10.21.0",
-    "looks-same": "^8.2.4",
+    "pixelmatch": "^7.1.0",
     "playwright": "1.57.0",
+    "pngjs": "^7.0.0",
     "sharp": "^0.34.5",
     "shiki": "^3.3.0"
   }
