update to use docker

--- a/packages/rettangoli-ui/package.json
+++ b/packages/rettangoli-ui/package.json
@@ -26,7 +26,8 @@
     "build:dev": "rtgl fe build -d && bun run esbuild-dev.js",
     "build": "rtgl fe build && bun run esbuild.js",
     "vt:generate": "bun run build:dev && rtgl vt generate",
-    "vt:report": "bun run build:dev && rtgl vt generate && rtgl vt report",
+    "vt:docker": "bun run build:dev && docker run --rm --user $(id -u):$(id -g) -v \"$(cd ../.. && pwd)\":/app -w /app/packages/rettangoli-ui han4wluc/playwright-bun:v1.57.0-noble bun run ../rettangoli-cli/cli.js vt generate",
+    "vt:report": "bun run vt:docker && rtgl vt report",
     "vt:accept": "rtgl vt accept",
     "serve": "bunx serve .rettangoli/vt/_site"
   },
