accordion support slot

--- a/packages/rettangoli-ui/src/components/accordionItem/accordionItem.view.yaml
+++ b/packages/rettangoli-ui/src/components/accordionItem/accordionItem.view.yaml
@@ -51,4 +51,5 @@ template:
     - div class="${openClass}":
       - div class=content-inner:
         - rtgl-view pb=md:
-          - rtgl-text: ${content}
+          - rtgl-text c=ac-fg: ${content}
+          - slot name=content:
